# otus-pyton-basic-2020

./: .gitignore  README.md
homework_01_functions/: main.py
homework_02_classes/: BaseCars.py  SportCar.py  TruckCar.py  base_car.py  exceptions.py  ferrari.py  main.py  retro_car.py  sport_car.py  truck_car.py
homework_03_base/: add_todos_to_db.py  add_users_to_db.py  db.py  fetch_todos.py  fetch_users.py  main.py
homework_04_frontend/: app.py
homework_04_frontend/itoys-project/templates/: index.html
homework_04_frontend/itoys-project/tests/: test_itoys_project.py
homework_04_frontend/itoys-project/views/: contact.py  index.py
homework_04_frontend/templates/catalog/: index.html
homework_04_frontend/views/: __init__.py  catalog.py
homework_05_containers/: Dockerfile  docker-compose.yaml
homework_05_containers/itoys-project/: app.py  config.py  main.py  pyproject.toml
homework_05_containers/itoys-project/migrations/versions/: b2cfe2e0231e_create_price_column.py  b84a7349f630_add_deleted_column.py  c4a42f847203_add_sale_column.py  ea8b58c1b520_create_model_product.py
homework_05_containers/itoys-project/models/: __init__.py  product.py
homework_05_containers/itoys-project/templates/: base.html  contact.html
homework_05_containers/itoys-project/templates/catalog/: index.html
homework_05_containers/itoys-project/views/: __init__.py  catalog.py
homework_06_django/babytoys/: .gitignore  db.sqlite3  manage.py  my.cnf
homework_06_django/babytoys/babytoys/: asgi.py  settings.py  settings_local.py  urls.py  views.py  (+1 more)
lections/: # Урок_9__01_09_20.py
(+35 files in other folders)
